[fix]refs #42 remove extra whitespace from headers

--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -4,7 +4,7 @@ html {
 }
 header {
   background-color: #000000;
-  height: 100px;
+  height: 60px;
   padding: 15px;
   margin: 0;
   position: fixed;
@@ -15,6 +15,9 @@ header {
   font-size: 20px;
   color: #ff00ff;
   margin: 1%;
+  float: left;
+  // display: flex;
+  // width: 30%;
 }
 // header ul {
 //   margin: 0 auto;
@@ -50,8 +53,7 @@ header {
   float: right;
 }
 .alert {
-  color: #fff;
-  float: left;
+  color: #000;
 }
 body {
   width: 100%;
